--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -1,1 +1,19 @@
 // Override from: "node_modules/bootstrap/scss/_variables.scss"
+@font-face {
+    font-family: "gotham";
+    src: local("gotham"),
+      url(../../fonts/Gotham-Medium.ttf) format("truetype");
+    font-weight: normal;
+    font-style: normal;
+  }
+
+// Typography
+//
+
+// Fonts
+$font-family-inter: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+$font-family-base: $font-family-inter;
+
+.btn:focus{
+    box-shadow: none !important;
+}
