changes to the font of different headers, creation of new page WebUx.vue and 3 new hexagons on that page

--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -1,6 +1,13 @@
 @font-face {
   font-family: "Gotham";
   src: local("Gotham"), url("/src/assets/fonts/Gotham-Black/Gotham-Black.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Gotham";
+  src: local("Gotham"), url("/src/assets/fonts/Gotham-Medium/Gotham-Medium.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
