--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -6,3 +6,12 @@
 // Fonts
 $font-family-inter: Gotham, Arial, 'Arial Narrow', sans-serif;
 $font-family-base: $font-family-inter;
+// Typography
+$font-size-base:              1rem; // Assumes the browser default, typically `16px`
+
+$h1-font-size:                90px;
+$h2-font-size:                30px;
+$h3-font-size:                18px;
+$h4-font-size:                $font-size-base * 1.5;
+$h5-font-size:                $font-size-base * 1.25;
+$h6-font-size:                $font-size-base;
