--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'base/variables';
 @import 'node_modules/bootstrap/scss/bootstrap';
-@import 'node_modules/bootstrap-vue/src/index';
+@import 'node_modules/bootstrap/scss/grid';
 @import 'base/typography';
+@import 'base/buttons';
 @import 'base/theme';
