--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -39,8 +39,8 @@ $grid-breakpoints: (
 // Define the maximum width of `.container` for different screen sizes.
 
 $container-max-widths: (
-  sm: 540px,
-  md: 720px,
-  lg: 960px,
-  xl: 1140px
+  sm: 540px, // sm: 540px,
+  md: 720px, // md: 720px,
+  lg: 960px, // lg: 960px,
+  xl: 2000px // xl: 1140px
 );
